--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -828,10 +828,6 @@ section,
   padding: 5rem 0;
 }
 
-.feature-content {
-  padding: 80px 0px;
-}
-
 .feature-left h2 {
   font-size: 2em;
   margin-bottom: 10px;
@@ -860,7 +856,6 @@ section,
   padding: 10px 20px;
   border-radius: 5px;
   width: calc(50% - 10px);
-  /* Fixed width for 2 items per row with gap adjustment */
   box-sizing: border-box;
 }
 
@@ -879,6 +874,7 @@ section,
   opacity: 1;
   padding: 5px 20px;
   margin-top: 30px;
+  margin-bottom: 20px;
   font-size: 1rem;
   color: #ffffff;
   cursor: pointer;
@@ -934,7 +930,7 @@ section,
 
 @media (max-width: 767.98px) {
   .feature-item {
-    width: 100%;
+    width: 100% !important;
     /* Full width on small screens */
   }
 }
@@ -1881,7 +1877,6 @@ section,
 
 /* ================= FAQ CSS  =============== */
 
-
 .faq-header {
   color: #212529;
   font-weight: 500;
@@ -2154,6 +2149,9 @@ section,
 }
 
 /* Feature Tab Content CSS  */
+.feature-list-section{
+  padding: 0px 10px;
+}
 .Features {
   background-color: #f8f9fa;
   padding: 5rem 0;
